2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/qemu_mips/init.c (grub_exit): Implement.
	(grub_halt): Likewise.
	* grub-core/lib/mips/qemu_mips/reboot.c (grub_reboot): Likewise.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/serial.c (grub_serial_register)
	[GRUB_MACHINE_MIPS_QEMU_MIPS]: Don't autostart console in order to bring
	the behaviour in line with x86 platforms.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hdparm.c (le16_to_char): Always byte-swap strings.
	(grub_ata_strncpy): Likewise.
	(grub_ata_identify): Add missing byteswaps.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/i386/pc/vga_text.c (screen_write_char): Add missing
	byte-swap.
	(screen_read_char): Likewise.
	(grub_vga_text_cls): Likewise.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/chainloader.c (copy_file_path): Handle non-ASCII
	filenames.
	(make_file_path): Likewise.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (scan): Support vscsi on IBM
	machines.
	Tested by: Paulo Flabiano Smorigo.
	Crucial information about API supplied by: Coleen <Last name unknown>.
	Reviewed by: Coleen <Last name unknown>.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c: Disable -Wcast-align.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmod.sh.in: Enable objconv errors 2030, 2050 and 2031
	as they are fatal.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am (rs_decoder.S): Add missing -ffreestanding.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-probe.c (escape_of_path): Fix double free.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videoinfo.c (hook): Show pitch.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Skip xen-syms.
